--- a/EnlightenMobile/AppShell.xaml
+++ b/EnlightenMobile/AppShell.xaml
@@ -60,11 +60,11 @@
             </Grid>
         </DataTemplate>
     </Shell.FlyoutHeaderTemplate>
-    <FlyoutItem Title="About"
-                Icon="tab_about.png"
+        <FlyoutItem Title="Scope"
+                Icon="tab_scope.png"
                 >
-        <ShellContent Route="about">
-            <views:MainPage/>
+        <ShellContent Route="scope">
+            <views:ScopeView />
         </ShellContent>
     </FlyoutItem>
     <FlyoutItem Title="BLE"
@@ -72,13 +72,6 @@
                 >
         <ShellContent Route="ble">
             <views:BluetoothView />
-        </ShellContent>
-    </FlyoutItem>
-    <FlyoutItem Title="Scope"
-                Icon="tab_scope.png"
-                >
-        <ShellContent Route="scope">
-            <views:ScopeView />
         </ShellContent>
     </FlyoutItem>
     <FlyoutItem Title="Advanced"
@@ -97,6 +90,13 @@
             <ShellContent  Route="log">
                 <views:LogView/>
             </ShellContent>
+        </Tab>
+        <Tab Title="About"
+                Icon="tab_about.png"
+                >
+        <ShellContent Route="about">
+            <views:MainPage/>
+        </ShellContent>
         </Tab>
     </FlyoutItem>
 </Shell>
