--- a/EnlightenMobile/Views/DeviceView.xaml
+++ b/EnlightenMobile/Views/DeviceView.xaml
@@ -2,12 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:vm="clr-namespace:EnlightenMobile.ViewModels"
-             x:Class="EnlightenMobile.Views.SpectrometerSettingsView"
+             x:Class="EnlightenMobile.Views.DeviceView"
              Title="{Binding title}"
              BackgroundColor="#fff">
 
     <ContentPage.BindingContext>
-        <vm:SpectrometerSettingsViewModel/>
+        <vm:DeviceViewModel/>
     </ContentPage.BindingContext>
     
     <ContentPage.Content>
