--- a/EnlightenMobile/AppShell.xaml
+++ b/EnlightenMobile/AppShell.xaml
@@ -56,11 +56,6 @@
                 <views:ScopeView />
             </ShellContent>
         </Tab>
-        <Tab Title="App" Icon="tab_app_settings.png" >
-            <ShellContent Route="settings">
-                <views:SettingsView />
-            </ShellContent>
-        </Tab>
         <Tab Title="Device" Icon="tab_device.png">
             <ShellContent  Route="specset">
                 <views:DeviceView/>
@@ -69,6 +64,11 @@
         <Tab Title="Log" Icon="tab_log.png">
             <ShellContent  Route="log">
                 <views:LogView/>
+            </ShellContent>
+        </Tab>
+        <Tab Title="Settings" Icon="tab_settings.png" >
+            <ShellContent Route="settings">
+                <views:SettingsView />
             </ShellContent>
         </Tab>
         <Tab Title="About"
