--- a/EnlightenMobile/Views/ScopeView.xaml
+++ b/EnlightenMobile/Views/ScopeView.xaml
@@ -172,6 +172,8 @@
                                 VerticalOptions="Start"
                                 JustifyContent="Center"
                                 >
+
+                            <Button Margin="2" Padding="6" HorizontalOptions="StartAndExpand" Text="Turn Laser On" />
                             <Button Margin="2" Text="Acquire" Command="{Binding acquireCmd}"
                                                        TextColor="{Binding acquireButtonTextColor}" 
                                                        BackgroundColor="{Binding acquireButtonBackgroundColor}" />
@@ -215,92 +217,7 @@
                             <Slider Maximum="5000" />
                             <!--  ValueChanged="OnSliderValueChanged" -->
                         </StackLayout>
-
-                        <!-- dark -->
-                        <Label Style="{StaticResource spacingLabel}"/>
-                        <FlexLayout JustifyContent="SpaceBetween" MinimumHeightRequest="80" >
-                            <Label  Text="Dark" MinimumWidthRequest="75" />
-                            <Switch IsToggled="{Binding darkEnabled}" Scale="1.5"/>
-                        </FlexLayout>
-
-                        <!-- Raman mode (no binding because code-behind pops-up confirmation dialog) -->
-                        <Label Style="{StaticResource spacingLabel}"/>
-                        <FlexLayout JustifyContent="SpaceBetween">
-                            <Label  Text="Raman Mode" />
-                            <Switch x:Name="switchRamanMode" Toggled="ramanMode_Toggled" Scale="1.5" />
-                        </FlexLayout>
-
-                        <!-- laser (if not in Raman Mode) -->
-                        <StackLayout IsVisible="{Binding isAuthenticated}" Orientation="Vertical">
-                            <Label Style="{StaticResource spacingLabel}"/>
-                            <FlexLayout JustifyContent="SpaceBetween" MinimumHeightRequest="80">
-                                <Label  Text="Fire Laser" />
-                                <Switch IsToggled="{Binding laserEnabled}" IsEnabled="{Binding laserIsAvailable}" Scale="1.5" />
-                            </FlexLayout>
-                        </StackLayout>
-
-                        <!-- x-axis -->
-                        <Label MinimumHeightRequest="12" />
-                        <FlexLayout JustifyContent="SpaceBetween">
-                            <Label Text="X-Axis" />
-                            <telerikInput:RadListPicker Placeholder="x-axis" 
-                                                            DisplayMemberPath="displayName"
-                                                            ItemsSource="{Binding xAxisOptions}"
-                                                            SelectedItem="{Binding xAxisOption}"
-                                                            DisplayLabelStyle="{StaticResource listPickerDisplayLabelStyle}"
-                                                            ItemStyle="{StaticResource listPickerItemStyle}"
-                                                            SelectedItemStyle="{StaticResource listPickerSelectedItemStyle}">
-                                <telerikInput:RadListPicker.ItemTemplate>
-                                    <DataTemplate>
-                                        <Label Text="{Binding name}"
-                                                   HorizontalTextAlignment="Center"
-                                                   TextColor="#555" />
-                                    </DataTemplate>
-                                </telerikInput:RadListPicker.ItemTemplate>
-                                <telerikInput:RadListPicker.SelectorSettings>
-                                    <telerikInput:PickerPopupSelectorSettings IsPopupModal="True"
-                                                                                  HeaderLabelText="Select X-Axis"
-                                                                                  PopupViewStyle="{StaticResource listPickerPopupViewStyle}"
-                                                                                  HeaderStyle="{StaticResource listPickerHeaderStyle}"
-                                                                                  HeaderLabelStyle="{StaticResource listPickerHeaderLabelStyle}"
-                                                                                  AcceptButtonStyle="{StaticResource listPickerAcceptButtonStyle}"
-                                                                                  CancelButtonStyle="{StaticResource listPickerCancelButtonStyle}"/>
-                                </telerikInput:RadListPicker.SelectorSettings>
-                            </telerikInput:RadListPicker>
-                        </FlexLayout>
-
-                        <!-- note -->
-                        <StackLayout Grid.Row="0" Grid.Column="0"
-                                         Orientation="Horizontal"
-                                         HorizontalOptions="FillAndExpand"
-                                         VerticalOptions="FillAndExpand">
-                            <Label Text="Note" VerticalTextAlignment="Center"/>
-                            <Entry x:Name="entryNote"
-                                       Text="{Binding note}" 
-                                       Placeholder="your text here"
-                                       VerticalOptions="FillAndExpand"
-                                       HorizontalOptions="FillAndExpand" />
-                        </StackLayout>
-                        <FlexLayout Grid.Row="0" Grid.Column="0"
-                                         HorizontalOptions="FillAndExpand"
-                                         VerticalOptions="FillAndExpand"
-                                         JustifyContent="SpaceBetween">
-                            <Label Text="QR Result" VerticalTextAlignment="Center"/>
-                            <Label Text="{Binding qrText}" VerticalTextAlignment="Center"/>
-                        </FlexLayout>
                     </StackLayout>
-
-                    <!-- Status Bar -->
-                    <FlexLayout Grid.Row="4" Grid.Column="0"
-                                    JustifyContent="SpaceBetween"
-                                    BackgroundColor="#444"
-                                    HeightRequest="30"
-                                    VerticalOptions="End"
-                                    Padding="10">
-                        <Label Text="{Binding spectrumMax}" />
-                        <Label Text="{Binding batteryState, StringFormat='Batt: {0}'}" TextColor="{Binding batteryColor}" />
-                    </FlexLayout>
-
                 </Grid>
             </ScrollView>
         </Grid>
